<resources>
    <string name="app_name">FootballMatchSchedule</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vs">VS</string>
    <string name="goal_detail">Goal Detail</string>
    <string name="red_card">Red Card</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="tunggu_sebentar">Tunggu Sebentar..</string>
    <string name="favorites">Favorites</string>
    <string name="next_match">Next Matches</string>
    <string name="previous_match">Previous Matches</string>
    <string name="favorite_match">Favorite Matches</string>
    <string name="team">Team</string>
    <string name="favorite_teams">Favorite Teams</string>
    <string name="search">Search</string>

    <string-array name="array_league">
        <item>English Premier League</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
    </string-array>
</resources>
