<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_next"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/next_match" />
        <item
            android:id="@+id/nav_prev"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/previous_match" />
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/team" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/favorite_match" />
        <item
            android:id="@+id/nav_favoriteteam"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/favorite_teams" />
    </group>

</menu>
