<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/layoutDetail"
    android:layout_height="match_parent"
    tools:context=".ui.detailevent.DetailEventActivity"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/detail_league"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_margin="4dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/detail_time"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/layoutHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/detail_namehome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textAlignment="center"/>
            <ImageView
                android:id="@+id/detail_imghome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"/>
            <TextView
                android:layout_gravity="center"
                android:id="@+id/detail_scorehome"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:text="@string/vs"
            android:layout_margin="8dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/layoutAway"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/detail_nameaway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textAlignment="center"/>
            <ImageView
                android:id="@+id/detail_imgaway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"/>
            <TextView
                android:layout_gravity="center"
                android:id="@+id/detail_scoreaway"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:id="@+id/detail_goalhome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:layout_gravity="center"/>
        <TextView
            android:layout_margin="4dp"
            android:text="@string/goal_detail"
            android:scrollHorizontally="false"
            android:layout_weight="1.4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_gravity="center"/>
        <TextView
            android:layout_weight="1"
            android:id="@+id/detail_goalaway"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:id="@+id/detail_redhome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:layout_gravity="center"/>
        <TextView
            android:layout_margin="4dp"
            android:text="@string/red_card"
            android:scrollHorizontally="false"
            android:layout_weight="1.4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_gravity="center"/>
        <TextView
            android:layout_weight="1"
            android:id="@+id/detail_redaway"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:id="@+id/detail_yellowhome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:layout_gravity="center"/>
        <TextView
            android:layout_margin="4dp"
            android:text="@string/yellow_card"
            android:scrollHorizontally="false"
            android:layout_weight="1.4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_gravity="center"/>
        <TextView
            android:layout_weight="1"
            android:id="@+id/detail_yellowaway"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>